src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__settings_overlay_keymap.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                ╭ Settings ───────────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │                  │                                                                              │                                │
│                                │    Appearance    │Keymap                                                                        │                                │
│                                │  > Keymap        │                                                                              │                                │
│                                │    ER Diagram    │Keymap preset                                                                 │                                │
│                                │    Clipboard     │                                                                              │                                │
│                                │                  │  > Default        saved                                                      │                                │
│                                │                  │    IDE                                                                       │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │────────────────────────────────┘
│                                │                  │                                                                              │────────────────────────────────┐
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                ╰ Enter: Apply │ Tab/⇧Tab: Section │ Esc: Cancel ─────────────────────────────────────────────────╯                                │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
j/k/↑↓:Select
