src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__settings_overlay_wrapped_cell.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                                                                                                            
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                ╭ Settings ───────────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │                  │                                                                              │                                │
│                                │    Appearance    │Wrapped Cell Mode                                                             │                                │
│                                │    Keymap        │Wrap wide result cells; optionally shrink columns to avoid horizontal         │                                │
│                                │  > Wrapped Cell  │scrolling.                                                                    │                                │
│                                │    ER Diagram    │                                                                              │                                │
│                                │                  │Allow horizontal scroll                                                       │                                │
│                                │                  │                                                                              │                                │
│                                │                  │  [Space] off (columns shrink to fit)                                         │                                │
│                                │                  │                                                                              │                                │
│                                │                  │Max lines per row                                                             │                                │
│                                │                  │                                                                              │────────────────────────────────┘
│                                │                  │  [j/k] 5 lines                                                               │────────────────────────────────┐
│                                │                  │                                                                              │                                │
│                                │                  │Toggle Wrapped Cell Mode at any time with Alt+L.                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                ╰ Enter: Apply │ Space: Toggle │ Tab/⇧Tab: Section │ Esc: Cancel ─────────────────────────────────╯                                │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Enter:Apply  j/k/↑↓:Select  Space:Toggle  Tab/⇧Tab:Section  Esc:Cancel
